--- a/index.html
+++ b/index.html
@@ -1,26 +1,57 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio de Socorro</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; background: #f4f4f4; }
-    h1 { color: #333; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hola, soy Socorro 👩‍💻</h1>
-  <p>Desarrolladora Junior con experiencia en Power Apps, Angular, .NET y SharePoint.</p>
+  <header>
+    <h1>👩‍💻 Socorro González</h1>
+    <p>Desarrolladora de software | Power Platform & Full Stack</p>
+    <nav>
+      <a href="#about">Sobre mí</a>
+      <a href="#projects">Proyectos</a>
+      <a href="#skills">Habilidades</a>
+      <a href="#contact">Contacto</a>
+    </nav>
+  </header>
 
-  <h2>Proyectos destacados</h2>
-  <ul>
-    <li><strong>Sistema de Inventario TRS:</strong> Sistema interno para gestionar solicitudes de equipo tecnológico. (Backend: .NET 6, Frontend: Angular)</li>
-    <li><strong>EISPECTION:</strong> Aplicación de auditoría interna usando Power Apps y SharePoint.</li>
-  </ul>
+  <section id="about">
+    <h2>Sobre mí</h2>
+    <p>Soy desarrolladora junior con experiencia en Power Apps, Angular, .NET y automatización con Power Automate. Me apasiona crear soluciones que ayuden a las empresas a mejorar sus procesos.</p>
+  </section>
 
-  <h2>Contacto</h2>
-  <p>Correo: socorrogc@ejemplo.com</p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/tuusuario">tuusuario</a></p>
+  <section id="projects">
+    <h2>Proyectos</h2>
+    <ul>
+      <li>
+        <strong>Sistema de Inventario TRS</strong><br>
+        Aplicación interna para solicitudes y control de equipo tecnológico.  
+        <em>Tecnologías: Angular, .NET 6, SQL Server</em>
+      </li>
+      <li>
+        <strong>EISPECTION</strong><br>
+        Plataforma de auditorías para una planta industrial.  
+        <em>Tecnologías: Power Apps, SharePoint, Power Automate</em>
+      </li>
+    </ul>
+  </section>
+
+  <section id="skills">
+    <h2>Habilidades</h2>
+    <p>Angular | .NET | Power Apps | SharePoint | SQL Server | Git | Power Automate</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contacto</h2>
+    <p>📧 socorrogc@ejemplo.com</p>
+    <p>🔗 <a href="https://linkedin.com/in/tuusuario" target="_blank">LinkedIn</a></p>
+  </section>
+
+  <footer>
+    <p>Hecho con 💜 por Socorro</p>
+  </footer>
 </body>
 </html>
